Tue Nov 26 11:43:19 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* ruby_atomic.h: use __atomic builtin functions supported by GCC.
	  __sync family are legacy functions now and it is recommended
	  that new code use the __atomic functions.
	  http://gcc.gnu.org/onlinedocs/gcc/_005f_005fatomic-Builtins.html

	* configure.in: check existence of __atomic functions.

Tue Nov 26 10:57:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.gemspec: revert Gem::Specification#date
	  for snapshot/release tarballs.

Tue Nov 26 06:42:50 2013  Aman Gupta <ruby@tmm1.net>

	* NEWS: Add ObjectSpace.after_gc_{start,end}_hook=
	* ext/objspace/objspace_dump.c: [DOC] catch up dump/dump_all to r43679

Tue Nov 26 04:12:10 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 612f85a.  Notable changes:

	  Fixed installation and activation of git: and path: gems via
	  Gem.use_gemdeps

	  Improved documentation coverage

	* test/rubygems:  ditto.

Mon Nov 25 22:23:03 2013  Zachary Scott  <e@zzak.io>

	* lib/xmlrpc.rb: [DOC] Fix link to xmlrpc4r site [Bug #9148]
	  Patch by Giorgos Tsiftsis

Mon Nov 25 19:48:10 2013  Zachary Scott  <e@zzak.io>

	* lib/uri/common.rb: [DOC] typo fixes by @vipulnsward [Fixes GH-456]
	  https://github.com/ruby/ruby/pull/456
	* lib/uri/generic.rb: [DOC] ditto.

Mon Nov 25 14:34:42 2013  Zachary Scott  <e@zzak.io>

	* ext/bigdecimal/bigdecimal.gemspec: bump BigDecimal to 1.2.3 for
	  proper release date in RubyGems

Mon Nov 25 14:25:08 2013  Zachary Scott  <e@zzak.io>

	* ext/bigdecimal/bigdecimal.gemspec: Remove Gem::Specification#date
	  We should rely on rubygems to create the date the gem was released
	  for each version.

Mon Nov 25 06:53:30 2013  Koichi Sasada  <ko1@atdot.net>

	* internal.h: do not use ruby_sized_xrealloc() and ruby_sized_xfree()
	  if HAVE_MALLOC_USABLE_SIZE (or _WIN32) is defined.

	  We don't need these function if malloc_usable_size() is available.
